demo/bank/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finance-payments
  labels:
    team: finance
    environment: dev
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Namespace
metadata:
  name: risk-management
  labels:
    team: risk
    environment: dev
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Namespace
metadata:
  name: compliance-ops
  labels:
    team: compliance
    environment: dev
    istio.io/dataplane-mode: ambient
